--- a/src/Artemis.UI/Screens/VisualScripting/NodeScriptWindowView.axaml
+++ b/src/Artemis.UI/Screens/VisualScripting/NodeScriptWindowView.axaml
@@ -6,6 +6,7 @@
         xmlns:controls="clr-namespace:FluentAvalonia.UI.Controls;assembly=FluentAvalonia"
         xmlns:avalonia="clr-namespace:Material.Icons.Avalonia;assembly=Material.Icons.Avalonia"
         xmlns:core="clr-namespace:Artemis.Core;assembly=Artemis.Core"
+        xmlns:system="clr-namespace:System;assembly=System.Runtime"
         mc:Ignorable="d" d:DesignWidth="800" d:DesignHeight="450"
         x:Class="Artemis.UI.Screens.VisualScripting.NodeScriptWindowView"
         x:DataType="visualScripting:NodeScriptWindowViewModel"
@@ -39,7 +40,7 @@
                                 <TextBlock Foreground="{DynamicResource TextFillColorSecondary}" Text="{Binding Description}" TextWrapping="Wrap"></TextBlock>
                             </StackPanel>
                         </DataTemplate>
-                        <DataTemplate>
+                        <DataTemplate DataType="system:Object">
                             <TextBlock Text="{Binding Key}"></TextBlock>
                         </DataTemplate>
                     </MenuItem.DataTemplates>
